# umapi-client.py

./: .gitignore  .travis.yml  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  _config.yml  app.py  index.html  pyproject.toml  requirements.txt  setup.py  tests.py  usage-instructions-v1.html  usage-instructions-v2.html
.changelog/: changelog.md  latest.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish.yml  python-package.yml
_includes/: head.html  nav.html
adobe_umapi/: __init__.py  api.py  auth.py  helper.py
adobe_umapi_client/: auth.py  error.py
auth/: README.md
docs/: index.md  usage-instructions-v1.md  usage-instructions-v2.md
tests/: conftest.py  test_actions.py  test_connections.py  test_functional.py  test_helper.py  test_legacy.py  test_live.py  test_queries.py  test_sessionmanager.py
tests/fixture/: certificate_pub.crt  private.key
umapi/: __init__.py  api.py  auth.py  error.py  helper.py
umapi_client/: __init__.py  api.py  auth.py  connection.py  error.py  functional.py  groups.py  helper.py  legacy.py  users.py  version.py
v1/: index.md  usage.md
v2/: index.md  usage.md
v3/: connecting.md  index.md  managing.md  queries.md
